<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_result_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/navSimple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_result_simple" />

        <Button
            android:id="@+id/navOwnContract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_result_own_contract" />

        <Button
            android:id="@+id/navGalleryPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_result_permission" />
    </LinearLayout>

</ScrollView>