<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:orientation="vertical"
      android:showDividers="middle"
      android:divider="@drawable/empty_divider">

    <TextView
        android:id="@+id/navActivityResult"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_result_title" />

    <TextView
        style="@style/Button"
        android:id="@+id/navCustomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_view_title" />

      <TextView
          style="@style/Button"
          android:id="@+id/navDrawOnCanvas"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/draw_on_canvas_title" />

      <TextView
          android:id="@+id/recyclerViewSection"
          style="@style/Button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/recycle_view_section_title" />
  </LinearLayout>

</ScrollView>